# 2048

./: 2048.cabal  2048.hs  Main.hs
