name:                Game2048
version:             0.1.0.0
synopsis:            Small console based implementation of 2048 game
homepage:            https://github.com/aslpavel/2048
license:             LGPL-3
author:              Pavel Aslanov
maintainer:          asl.pavel@gmail.com
copyright:           Pavel Aslanov
category:            Game
build-type:          Simple
cabal-version:       >=1.10

-- extra-source-files: README.md

source-repository head
     type: git
     location: git://github.com/aslpavel/2048.git

executable 2048
  main-is: Main.hs
  build-depends:
        base    >=4.6
      , random (>=1.0 && <1.1)
      , mtl    (>=2.1 && <2.2)
  default-language:   Haskell2010